--- a/Graduation/activity_information.html
+++ b/Graduation/activity_information.html
@@ -29,14 +29,11 @@
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon dark"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive" style="text-align: right;">
                 <ul class="navbar-nav ml-auto my-2 my-lg-0" style="text-shadow: 0px 0px 3px rgba(40, 40, 40, 0.5)">
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger " href="index.html">回首頁</a>
-                    </li>
-
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger " href="index.html">回首頁</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="donate.html">募資平台</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#page-top">活動資訊</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="About_us.html">關於我們</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">贊助廠商</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="support.html">贊助廠商</a></li>
 
                 </ul>
             </div>
@@ -45,6 +42,9 @@
 
     <div class="banner" style="background-color: rgba(128, 128, 128, 0.196);">
         <img src="assets/banner.jpeg">
+        <div class="banner-tagline">
+            <h1>lorem ipsum</h1>
+        </div>
     </div>
 
     <header class="masthead d-flex" >
